# Harmony11OsDemo

./: build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/ets/: Handle.ts
entry/src/main/ets/pages/: BlackboxPage.ets  DeviceInfoPage.ets  FileStoragePage.ets  Index.ets  NativePage.ets  NetworkPage.ets  PermissionPage.ets  ServicePage.ets  SettingPage.ets  ThreadPage.ets  WindowPage.ets
entry/src/main/ets/utils/: CommonConstants.ets  FileUtils.ts  HttpUtil.ets  Log.ets  Logger.ets  PermissionUtil.ets  UiUtils.ets
entry/src/main/ets/viewmodel/: DrmModel.ets
entry/src/main/ets/workers/: MyWorker.ts
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/base/profile/: main_pages.json
staticlibrary/: Index.ets  oh-package-lock.json5  oh-package.json5
staticlibrary/src/main/: module.json5
staticlibrary/src/main/cpp/: CMakeLists.txt  napi_init.cpp
staticlibrary/src/main/cpp/core/: ApplicationInfoClass.cpp  ApplicationInfoClass.h  DeviceInfoClass.cpp  DeviceInfoClass.h
staticlibrary/src/main/cpp/types/libstaticlibrary/: Index.d.ts  oh-package.json5
staticlibrary/src/main/cpp/utils/: Logger.cpp  Logger.h
staticlibrary/src/main/ets/components/mainpage/: MainPage.ets
staticlibrary/src/main/ets/components/sdk/: Lsdk.ets
staticlibrary/src/ohosTest/: module.json5
